tests/baselines/reference/usingDeclarationsWithImportHelpers.errors.txt
usingDeclarationsWithImportHelpers.ts(4,5): error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.


==== usingDeclarationsWithImportHelpers.ts (1 errors) ====
    export {};
    
    {
        using a = null;
        ~~~~~~~~~~~~~~
!!! error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.
    }